Fixed some things. Regarding horizontal scroll.

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -251,4 +251,12 @@ body {
     .InfoBoard {
         grid-template-columns: 15% auto auto 15%;
     }
+
+    .Image-Banner {
+        width: 140%;
+    }
+
+    .Container-Banner {
+        overflow: hidden;
+    }
   }
